Сделан overlay в Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,194 +83,202 @@
           <ul class="example list">
             <li class="example-item techno-example">
               <a href="#" class="link">
-                <img
-                  src="./images/techno.jpg"
-                  width="370"
-                  height="294"
-                  alt="Веб
-              страница"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/techno.jpg"
+                    width="370"
+                    height="294"
+                    alt="Веб страница"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Технокряк</h2>
                   <p class="example-text">Веб-сайт</p>
                 </div>
-                <!-- <p class="content-text"> 
-                Технокряк это современная площадка распространения коронавируса.
-                Компании используют эту платформу для цифрового шпионажа и атак
-                на защищённые сервера конкурентов.
-              </p>
-              -->
               </a>
             </li>
             <li class="example-item neworlean-example">
               <a href="#" class="link">
-                <img
-                  src="./images/neworlean.jpg"
-                  width="370"
-                  height="294"
-                  alt="Постер с баскетболистами"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/neworlean.jpg"
+                    width="370"
+                    height="294"
+                    alt="Постер с баскетболистами"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">
                     Постер New Orlean vs Golden Star
                   </h2>
                   <p class="example-text">Дизайн</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
             <li class="example-item seafood-example">
               <a href="#" class="link">
-                <img
-                  src="./images/seafood.jpg"
-                  width="370"
-                  height="294"
-                  alt="Логотип ресторана"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/seafood.jpg"
+                    width="370"
+                    height="294"
+                    alt="Логотип ресторана"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Ресторан Seefood</h2>
                   <p class="example-text">Приложение</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
             <li class="example-item prime-example">
               <a href="#" class="link">
-                <img
-                  src="./images/prime.jpg"
-                  width="370"
-                  height="294"
-                  alt="Наушники"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/prime.jpg"
+                    width="370"
+                    height="294"
+                    alt="Наушники"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Проект Prime</h2>
                   <p class="example-text">Маркетинг</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
             <li class="example-item boxes-example">
               <a href="#" class="link">
-                <img
-                  src="./images/boxes.jpg"
-                  width="370"
-                  height="294"
-                  alt="Фото коробок"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/boxes.jpg"
+                    width="370"
+                    height="294"
+                    alt="Фото коробок"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Проект Boxes</h2>
                   <p class="example-text">Приложение</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
             <li class="example-item computer-example">
               <a href="#" class="link">
-                <img
-                  src="./images/computer.jpg"
-                  width="370"
-                  height="294"
-                  alt="Компьютер"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/computer.jpg"
+                    width="370"
+                    height="294"
+                    alt="Компьютер"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Inspiration has no Borders</h2>
                   <p class="example-text">Веб-сайт</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
             <li class="example-item limited-example">
               <a href="#" class="link">
-                <img
-                  src="./images/limited.jpg"
-                  width="370"
-                  height="294"
-                  alt="Журнал"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/limited.jpg"
+                    width="370"
+                    height="294"
+                    alt="Журнал"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Издание Limited Edition</h2>
                   <p class="example-text">Дизайн</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
             <li class="example-item lab-example">
               <a href="#" class="link">
-                <img
-                  src="./images/lab.jpg"
-                  width="370"
-                  height="294"
-                  alt="Брелок"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/lab.jpg"
+                    width="370"
+                    height="294"
+                    alt="Брелок"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Проект LAB</h2>
                   <p class="example-text">Маркетинг</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
             <li class="example-item laptop-example">
               <a href="#" class="link">
-                <img
-                  src="./images/laptop.jpg"
-                  width="370"
-                  height="294"
-                  alt="Ноутбук"
-                  class="portfolio-link"
-                />
+                <div class="content-img">
+                  <img
+                    src="./images/laptop.jpg"
+                    width="370"
+                    height="294"
+                    alt="Ноутбук"
+                    class="portfolio-link"
+                  />
+                  <p class="content-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="examples">
                   <h2 class="example-title">Growing Business</h2>
                   <p class="example-text">Growing Business</p>
                 </div>
-                <!-- <p class="content-text"> 
-                              Технокряк это современная площадка распространения коронавируса.
-                              Компании используют эту платформу для цифрового шпионажа и атак
-                              на защищённые сервера конкурентов.
-                            </p>
-                            -->
               </a>
             </li>
           </ul>
