Сделаны переходы при hover

--- a/index.html
+++ b/index.html
@@ -191,7 +191,11 @@
                   </a>
                 </li>
                 <li class="social-item">
-                  <a href="#" aria-label="Ссылка на Фейсбук" class="link">
+                  <a
+                    href="#"
+                    aria-label="Ссылка на Фейсбук"
+                    class="link social-link"
+                  >
                     <svg class="facebook icon-socials" width="20" height="20">
                       <use href="./images/sprite.svg#icon-facebook"></use></svg
                   ></a>
